--- a/public/index.html
+++ b/public/index.html
@@ -17,36 +17,12 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="apple-touch-icon" href="/static/img/apple-touch-icon.png">
   <meta name="theme-color" content="#ffffff">
-  <style>
-    #loadingSpinner {
-      position: absolute; 
-      left: 50%; 
-      top: 50%; 
-      border-radius: 50%; 
-      background: url('<%= VUE_APP_CDN_PATH %>static/img/loading.svg') no-repeat 0 0/cover; 
-      width: 66px; 
-      height: 66px;
-      animation: lds-dual-ring 1.2s linear infinite;
-    }
-
-    @keyframes lds-dual-ring {
-      0% {
-        transform: translate(-50%, -50%) rotate(0deg);
-      }
-      100% {
-        transform: translate(-50%, -50%) rotate(360deg);
-      }
-    }
-  </style>
 </head>
 <body>
 <noscript>
   <strong>We're sorry but AVN Stars doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
-<div id="app">
-  <!-- Show animated spinner while main scripts loading -->
-  <div id="loadingSpinner">
-</div>
+<div id="app"></div>
 <!-- built files will be auto injected -->
 </body>
 </html>
