Add VUE_APP_CDN_PATH to static path

--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,14 @@
   <meta name="HandheldFriendly" content="true">
   <link href="https://fonts.googleapis.com/css?family=Courgette|Cutive+Mono|Lato|Roboto:300,400,500,700&amp;subset=cyrillic-ext" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400" rel="stylesheet">
-  <link rel="icon" href="/static/img/<%= VUE_APP_NAME %>/favicon.ico">
+  <link rel="icon" href="<%= VUE_APP_CDN_PATH %>static/img/<%= VUE_APP_NAME %>/favicon.ico">
   <script src="https://www.google.com/recaptcha/api.js?onload=vueRecaptchaApiLoaded&render=explicit" async defer>
   </script>
   <!-- <script src="https://assets.avn.com/v/okev.js" async defer></script> -->
   <script src="https://resources.avn.com/v/okev.js" async defer></script>
-  <link rel="manifest" href="/manifest.json" crossorigin="use-credentials">
+  <link rel="manifest" href="<%= VUE_APP_CDN_PATH %>manifest.json" crossorigin="use-credentials">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <link rel="apple-touch-icon" href="/static/img/apple-touch-icon.png">
+  <link rel="apple-touch-icon" href="<%= VUE_APP_CDN_PATH %>static/img/apple-touch-icon.png">
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
