Return to old path for loading.svg (not cahched response from simple.avn.com)

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       left: 50%; 
       top: 50%; 
       border-radius: 50%; 
-      background: url('<%= VUE_APP_CDN_PATH %>static/img/loading.svg') no-repeat 0 0/cover; 
+      background: url('/static/img/loading.svg') no-repeat 0 0/cover; 
       width: 66px; 
       height: 66px;
       animation: lds-dual-ring 1.2s linear infinite;
