--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="apple-touch-icon" href="<%= VUE_APP_CDN_PATH %>static/img/apple-touch-icon.png">
   <meta name="theme-color" content="#ffffff">
+  <script src="/static/js/aws-sdk-2.612.0.min.js" async defer></script>
 </head>
 <body>
 <noscript>
