Update noscript tag innerText

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 </head>
 <body>
 <noscript>
-  <strong>We're sorry but AVN Stars doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+  <strong>Whoops, looks like you don't have JavaScript enabled. You'll need to enable it to use AVN Stars</strong>
 </noscript>
 <div id="app">
   <!-- Show animated spinner while main scripts loading -->
