--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
   <title><%= VUE_APP_TITLE %></title>
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,viewport-fit=cover, user-scalable=no">
   <meta name="HandheldFriendly" content="true">
+  <meta content="AVN Stars is the world’s fastest growing social media platform for the adult entertainment industry. Follow porn stars, clip artists and content creator profiles for free. See exclusive photos, stream hardcore clips, posts, and live shows from the hottest AVN Stars." property="description">
+  <meta content="AVN Stars is the world’s fastest growing social media platform for the adult entertainment industry. Follow porn stars, clip artists and content creator profiles for free. See exclusive photos, stream hardcore clips, posts, and live shows from the hottest AVN Stars." property="og:description">
   <link href="https://fonts.googleapis.com/css?family=Courgette|Cutive+Mono|Lato|Roboto:300,400,500,700&amp;subset=cyrillic-ext" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400" rel="stylesheet">
   <link rel="icon" href="<%= VUE_APP_CDN_PATH %>static/img/<%= VUE_APP_NAME %>/favicon.ico">
